added random background, added exit button to terminal

--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
     "linkedin": "Enrique Poirier",
     "xtwitter": "1pxlchibs"
   },
-  "aboutGreeting": "Hi I'm Enrique. A self thought game developer.",
+  "aboutGreeting": "Hi I'm Enrique. ",
   "projects": [
     [
       "Neon Blight",
